--- a/SP/SP/SP.vcxproj.filters
+++ b/SP/SP/SP.vcxproj.filters
@@ -27,6 +27,24 @@
     <ClInclude Include="Functions.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Strukture.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="PrviProlaz.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="DrugiProlaz.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Instrukcija.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="PostaviUslove.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Registar.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
